--- a/05 React/02Project/2animals/package.json
+++ b/05 React/02Project/2animals/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "first",
+  "name": "2animals",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma": "^1.0.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
